--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,15 @@
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <!-- TODO: Add GTM head script here -->
-</head>
+</<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GNCY0375EF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GNCY0375EF');
+</script>>
 <body class="bg-light">
   <!-- TODO: Add GTM noscript here -->
   {% include header.html %}
